	* apps/netutils/dnsclient:  Break the one big monolithic file into
	  three smaller files (2014-4-11).
	* apps/netutils/ntpclient/ntpclient.c: Corrections to the NTP client
	  from Manuel Stuehn (2014-4-12).
	* apps/examples/touchscreen:  Add a configuration option to indicate if
	  architecture-specific initialized is required, yes or no (2014-4-14).
	* apps/system/nxplayer/nxplayer.c:  Compilation failure in one
	  configuration reported by Manuel Stuhn (2014-4-21).
	* apps/system/sdcard:  Remove an STM32 dependency.  From Bob Doiron
	  (2014-4-21).
	* apps/nshlib: malloc/free IOBUFFER for 'cat' and 'hexdump' commands
	  instead of using the stack.  From Bob Doiron (2014-4-21).
	* apps/examples/cpuhog, serialblaster, and serialrx:  Stress test
	  examples added by Bob Doiron (2014-4-22).
	* apps/examples/telnetd:  Naming is confused.  In someplaces 'telnetd',
	  and in others 'shell.'  All changes to telnetd.  Noted by Pelle
	  Windestam (2014-4-38).

7.3 2014-xx-xx Gregory Nutt <gnutt@nuttx.org>

	* apps/examples/serialblaster:  Update configuration an make logic in
	  order to select that the serial blaster task priority and stack size.
	  From Bob Doiron (2014-4-30).
	* apps/nshlib/Kconfig and other NSH files:  The alternate console device
	  CONFIG_NSH_CONDEV must not be defined unconditionally.  This causes errors
	  when using Telnet sessions.  This was solved by adding CONFIG_NSH_ALTCONDEV:
	  CONFIG_NSH_ALTCONDEV enables or disables the feature then, if enabled,
	  CONFIG_NSH_CONDEV provides the alternative console device name (2014-5-5).
	* apps/system/i2c/i2c_get.c:  Fix to show the updated register address on
	  each fetch (vs. showing the same starting address each time).  From
	  Ryan VanSickle (2014-5-8).
	* apps/interpreters/prun and apps/include/interpreters/prun.h:  Broke out
	  the P-code execution logic from apps/examples/pashello and moved it to
	  these directorit where it can be used more generally (2014-5-9).