@@ -42,6 +42,8 @@
 
 #include <nuttx/config.h>
 
+#include <sys/types.h>
+
 /****************************************************************************
  * Pre-Processor Definitions
  ****************************************************************************/
