@@ -8,7 +8,10 @@ config SYSTEM_PRUN
 	default n
 	depends on INTERPRETERS_PCODE
 	---help---
-		Build the Pascal P-Code interpreter / Virtual machine
+		Build the Pascal P-Code interpreter / Virtual machine.  This selection
+		just builds a library of P-Code-related functions as described in
+		include/apps/prun.h.  This selection is also necessary to enable other
+		P-Code related features.
 
 if SYSTEM_PRUN
 
@@ -17,6 +20,38 @@ config SYSTEM_PEXEC
 	default n
 	---help---
 		Generates an NSH built-in task that may be used to execute P-Code
-		from the NSH command line.
+		files from the NSH command line.  For example:
 
+		nsh> pexec /bin/hello.pex
+		Hello, World!
+
+if SYSTEM_PEXEC
+
+config SYSTEM_PEXEC_STACKSIZE
+	int "P-code interpreter stack size"
+	default 2048
+	---help---
+		This is the stack size that will be used when starting P-code interpreter.
+
+config SYSTEM_PEXEC_PRIORITY
+	int "P-code interpreter priority"
+	default 100
+	---help---
+		This is the task_priority that will be used when starting P-code interpreter.
+
+config SYSTEM_PEXEC_VARSTACKSIZE
+	int "P-code variable stack size (default)"
+	default 1024
+	---help---
+		This default size of the P-Code variable storage area to be allocated by the
+		P-Code runtime.
+
+config SYSTEM_PEXEC_STRSTACKSIZE
+	int "P-code string stack size (default)"
+	default 128
+	---help---
+		This default size of the P-Code string stack area to be allocated by the
+		P-Code runtime.
+
+endif
 endif
